--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,3 @@
-<div class="footer">
-    Powered by <a href="https://gohugo.io/">Hugo</a> with
-    <a href="https://github.com/mrmierzejewski/hugo-theme-console/">Console Theme</a>. 
+<div class="footer" style="font-size: 0.85em;">
+    &copy; Luca Bertinetto {{ now.Year }}. Made with <a href="https://gohugo.io/" class="site-link">Hugo</a> (customised <a href="https://github.com/mrmierzejewski/hugo-theme-console/" class="site-link">Console Theme</a>). Art by William Turner and DALL·E.
 </div>
