--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,7 @@
 {{ .Content }}
 
 <div class="posts-list">
-{{ range sort .Pages "Date" "desc" }}
+{{ range sort .Data.Pages "Date" "desc" }}
     {{ if not .Params.private }}
         <div class="post">
             <p>
